--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 									data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
 									data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]"
 									data-paddingleft="[0,0,0,0]"
-									style="z-index: 5;background-color:rgba(71, 70, 80, 0.8);border-color:rgba(0, 0, 0, 0);border-width:0px;">
+									style="z-index: 5;background: rgba(71, 70, 80, 0.452);border-color:rgba(0, 0, 0, 0);border-width:0px;">
 								</div>
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption Newspaper-Title   tp-resizeme" id="slide-100-layer-2"
@@ -372,7 +372,7 @@
 									data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
 									data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]"
 									data-paddingleft="[0,0,0,0]"
-									style="z-index: 5;background-color:rgba(71, 70, 80, 0.8);border-color:rgba(0, 0, 0, 0);border-width:0px;">
+									style="z-index: 5;background: rgba(71, 70, 80, 0.452);border-color:rgba(0, 0, 0, 0);border-width:0px;">
 								</div>
 
 								<!-- LAYER NR. 2 -->
