--- a/contact-1.html
+++ b/contact-1.html
@@ -46,7 +46,7 @@
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
-	 <<script type="text/javascript">
+	<script type="text/javascript">
 		var onloadCallback = function () {
 			grecaptcha.render('g-recaptcha', {
 				'sitekey': '6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4'
