--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 	<meta property="og:image" content="" />
 	<meta name="format-detection" content="telephone=no">
 
-	<!-- FAVICONS ICON ============================================= -->
+	<!-- FAVICONS ICON and Remixicons============================================= -->
 	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/school__logo-removebg-preview.png" />
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
 	<!-- PAGE TITLE HERE ============================================= -->
 
@@ -114,6 +115,7 @@
 							<span></span>
 							<span></span>
 							<span></span>
+							
 						</button>
 						<!-- Author Nav ==== -->
 						<div class="secondary-menu">
