--- a/index.html
+++ b/index.html
@@ -75,24 +75,8 @@
 			<div class="top-bar">
 				<div class="container">
 					<div class="row d-flex justify-content-between">
-						<!-- <div class="topbar-left">
-							<ul>
-								<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
-								<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li> 
-							<li><a href="login.html">Login</a></li>
-
-							</ul>
-						</div>   -->
 						<div class="topbar-right">
 							<ul>
-								<!-- <li>
-								<select class="header-lang-bx">
-									<option data-icon="flag flag-uk">English UK</option>
-									<option data-icon="flag flag-us">English US</option>
-								</select>
-							</li> -->
-								<!-- <li><a href="login.html"><i class="ti-new-window loginbar"></i> Login</a></li> -->
-								<!-- <li><a href="register.html">Register</a></li> -->
 							</ul>
 							</div>
 					</div>
@@ -316,7 +300,7 @@
 									data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]"
 									data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]"
 									data-paddingleft="[0,0,0,0]"
-									style="z-index: 7; white-space: nowrap;text-transform:uppercase; color:rgb(221, 214, 214); font-family:rubik; font-size:18px; font-weight:400; text-align:center">
+									style="z-index: 7; white-space: nowrap;text-transform:uppercase; color:rgb(221, 214, 214); font-family:rubik; font-size:18px; font-weight:500; text-align:center">
 									Welcome to the
 								</div>
 
@@ -415,7 +399,7 @@
 								</div>
 
 								<!-- LAYER NR. 3 -->
-								<div class="tp-caption Newspaper-Subtitle  subtitle-hidden tp-resizeme" id="slide-200-layer-4"
+								<!-- <div class="tp-caption Newspaper-Subtitle  subtitle-hidden tp-resizeme" id="slide-200-layer-4"
 									data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
 									data-voffset="['320','320','320','290']" data-width="['800','800','700','420']"
 									data-height="['100','100','100','120']" data-whitespace="unset" data-type="text" data-responsive_offset="on"
@@ -427,7 +411,7 @@
 									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 									Ipsum has been the industry's standard dummy text ever since the Lorem ipsum dolor,
 									sit amet consectetur adipisicing
-								</div>
+								</div> -->
 								<div class="tp-caption Newspaper-Button rev-btn" id="slide-100-layer-6"
 									data-x="['center','center','center','center']"
 									data-hoffset="['-90','-80','-75','-90']" data-y="['top','top','top','top']"
