updated home section

--- a/about-1.html
+++ b/about-1.html
@@ -73,7 +73,7 @@
 									<option data-icon="flag flag-us">English US</option>
 								</select>
 							</li> -->
-							<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
+							<!-- <li><a href="login.html"><i class="ti-new-window"></i> Login</a></li> -->
 							<!-- <li><a href="register.html">Register</a></li> -->
 						</ul>
 					</div> 
@@ -120,6 +120,7 @@
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
 								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60" ></a>
+								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60"></a>
 							</div>
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="/index.html">Home</a>
