--- a/index.html
+++ b/index.html
@@ -65,22 +65,7 @@
 			margin: 5px 20px 20px 0;
 		}
 	</style>
-<script>
-		
-			function handlePreloader() {
-				setTimeout(function(){
-if($('.preloader').length){
-	$('body').addClass('page-loaded');
-	$('.preloader').fadeOut(400)
-}
-				}, 3000)
-					// if ($('.preloader').length) {
-					// 	$('body').addClass('page-loaded');
-					// 	$('.preloader').delay(800).fadeOut(300);
-					// }
-				}
-				handlePreloader()
-</script>
+
 </head>
 
 <body id="bg">
@@ -184,7 +169,7 @@ if($('.preloader').length){
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
 												<li><a href="courses.html">Admission Details</a></li>
-												<li><a href="courses-details.html">Fee Structure</a></li>
+												<li><a href="/fee-structure.html">Fee Structure</a></li>
 												<li><a href="profile.html">Result</a></li>
 										
 											</ul>
