--- a/contact-1.html
+++ b/contact-1.html
@@ -156,7 +156,7 @@ document.getElementsByClassName('btn-send')
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
 												<li><a href="courses.html">Admission Details</a></li>
-												<li><a href="courses-details.html">Fee Structure</a></li>
+												<li><a href="/fee-structure.html">Fee Structure</a></li>
 												<li><a href="profile.html">Result</a></li>
 											->
 											</ul>
