--- a/courses.html
+++ b/courses.html
@@ -163,7 +163,7 @@
 										<h5 class="menu-adv-title">Our Courses</h5>
 										<ul>
 											<li><a href="courses.html">Courses </a></li>
-											<li><a href="courses-details.html">Courses Details</a></li>
+											<li><a href="/fee-structure.html">Courses Details</a></li>
 											<li><a href="profile.html">Instructor Profile</a></li>
 											<li><a href="event.html">Upcoming Event</a></li>
 											<li><a href="membership.html">Membership</a></li>
@@ -653,7 +653,7 @@
 									<h5 class="footer-title">Courses</h5>
 									<ul>
 										<li><a href="courses.html">Courses</a></li>
-										<li><a href="courses-details.html">Details</a></li>
+										<li><a href="/fee-structure.html">Details</a></li>
 										<li><a href="membership.html">Membership</a></li>
 										<li><a href="profile.html">Profile</a></li>
 									</ul>
@@ -874,7 +874,7 @@
 										<h5 class="menu-adv-title">Our Courses</h5>
 										<ul>
 											<li><a href="courses.html">Courses </a></li>
-											<li><a href="courses-details.html">Courses Details</a></li>
+											<li><a href="/fee-structure.html">Courses Details</a></li>
 											<li><a href="profile.html">Instructor Profile</a></li>
 											<li><a href="event.html">Upcoming Event</a></li>
 											<li><a href="membership.html">Membership</a></li>
@@ -1364,7 +1364,7 @@
 									<h5 class="footer-title">Courses</h5>
 									<ul>
 										<li><a href="courses.html">Courses</a></li>
-										<li><a href="courses-details.html">Details</a></li>
+										<li><a href="/fee-structure.html">Details</a></li>
 										<li><a href="membership.html">Membership</a></li>
 										<li><a href="profile.html">Profile</a></li>
 									</ul>
