--- a/gallery.html
+++ b/gallery.html
@@ -147,7 +147,7 @@
 										<h5 class="menu-adv-title">Academics</h5>
 										<ul>
 											<li><a href="courses.html">Admission Details</a></li>
-											<li><a href="courses-details.html">Fee Structure</a></li>
+											<li><a href="/fee-structure.html">Fee Structure</a></li>
 											<li><a href="profile.html">Result</a></li>
 											<!-- <li><a href="event.html">Upcoming Event</a></li>
 											<li><a href="membership.html">Membership</a></li> -->
