--- a/about-1.html
+++ b/about-1.html
@@ -86,6 +86,7 @@
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
 							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
 						</div>
 						<!-- Mobile Nav Button ==== -->
 						<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -119,8 +120,9 @@
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
-								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60" ></a>
-								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60"></a>
+								<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" class="img-align" alt=""
+										width="60"></a>
+								<!-- <a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60"></a> -->
 							</div>
 							<ul class="nav navbar-nav">
 								<li class=""><a href="/index.html">Home</a>
@@ -228,7 +230,8 @@
     <!-- Inner Content Box ==== -->
     <div class="page-content">
         <!-- Page Heading Box ==== -->
-        <div class="page-banner " style="background-image:url(assets/images/lol.jpeg); height: 30rem;">
+		<div class="page-banner "
+			style="background-image:url(assets/images/5th.jpeg); height: 30rem; border-bottom-right-radius: 20px; border-bottom-left-radius: 20px">
             <div class="container">
                 <div class="page-banner-entry">
                     <h1 class="text-white">About Our School</h1>
