--- a/contact-1.html
+++ b/contact-1.html
@@ -82,7 +82,7 @@ document.getElementsByClassName('btn-send')
 						<div class="topbar-right">
 							<ul>
 							
-								<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
+								<!-- <li><a href="login.html"><i class="ti-new-window"></i> Login</a></li> -->
 							
 							</ul>
 						</div>
@@ -95,6 +95,7 @@ document.getElementsByClassName('btn-send')
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
 							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
 						</div>
 						<!-- Mobile Nav Button ==== -->
 						<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -128,7 +129,7 @@ document.getElementsByClassName('btn-send')
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
-								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""
+								<a href="index.html"><img class="img-align" src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""
 										width="60"></a>
 							</div>
 							<ul class="nav navbar-nav">
