--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
 								</li>
 
 							</ul>
-
+							<div class="nav-social-link">
+								<a href="javascript:;"><i class="fa fa-facebook"></i></a>
+								<a href="javascript:;"><i class="fa fa-google-plus"></i></a>
+								<a href="javascript:;"><i class="fa fa-linkedin"></i></a>
+							</div>
 						</div>
 						<!-- Navigation Menu END ==== -->
 					</div>
