--- a/fee-structure.html
+++ b/fee-structure.html
@@ -73,7 +73,7 @@
 								<option data-icon="flag flag-us">English US</option>
 							</select>
 						</li> -->
-						<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
+						<!-- <li><a href="login.html"><i class="ti-new-window"></i> Login</a></li> -->
 						<!-- <li><a href="register.html">Register</a></li> -->
 					</ul>
 				</div> 
@@ -86,6 +86,7 @@
 					<!-- Header Logo ==== -->
 					<div class="menu-logo">
 						<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
+						<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
 					</div>
 					<!-- Mobile Nav Button ==== -->
 					<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -119,7 +120,9 @@
 					<!-- Navigation Menu ==== -->
 					<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 						<div class=" logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60" ></a>
+							<!-- <a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60" ></a> -->
+							<a href="index.html"><img class="img-align" src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""
+									width="60"></a>
 						</div>
 						<ul class="nav navbar-nav">
 							<li class=""><a href="/index.html">Home</a>
