--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
 								<option data-icon="flag flag-us">English US</option>
 							</select>
 						</li> -->
-						<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
+						<!-- <li><a href="login.html"><i class="ti-new-window"></i> Login</a></li> -->
 						<!-- <li><a href="register.html">Register</a></li> -->
 					</ul>
 				</div> 
@@ -83,6 +83,7 @@
 					<!-- Header Logo ==== -->
 					<div class="menu-logo">
 						<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
+						<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
 					</div>
 					<!-- Mobile Nav Button ==== -->
 					<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -116,7 +117,7 @@
 					<!-- Navigation Menu ==== -->
 					<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
 						</div>
 						<ul class="nav navbar-nav">
 							<li><a href="/index.html">Home</a>
