--- a/about-1.html
+++ b/about-1.html
@@ -21,8 +21,8 @@
 	<meta name="format-detection" content="telephone=no">
 	
 	<!-- FAVICONS ICON ============================================= -->
-	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+	<link rel="icon" href="assets/images/icon/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
 	
 	<!-- PAGE TITLE HERE ============================================= -->
 	<title>Fatima Convent Senior Secondary </title>
@@ -85,8 +85,8 @@
 					<div class="container clearfix">
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
-							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/school_logo_White_edited-removebg-preview.png" alt=""></a>
 						</div>
 						<!-- Mobile Nav Button ==== -->
 						<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -120,7 +120,8 @@
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
-								<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" class="img-align" alt=""
+								<a href="index.html"><img src="assets/images/icon/school_logo_White_edited-removebg-preview.png" class="img-align"
+										alt=""
 										width="60"></a>
 								<!-- <a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60"></a> -->
 							</div>
@@ -132,7 +133,7 @@
 									<ul class="sub-menu">
 										<li class="active"><a href="about-1.html">About</a>
 										</li>
-										<li><a href="event.html">Event</a></li>
+										<li><a href="/error-404.html">Event</a></li>
 										<!-- <li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a>
 											<ul class="sub-menu">
 												<li><a href="faq-1.html">FAQ's 1</a></li>
@@ -141,7 +142,7 @@
 										</li> -->
 										<li><a href="contact-1.html">Contact Us</a>
 										</li>
-										<li><a href="/gallery.html">Gallery</a></li>
+										<li><a href="/error-404.html">Gallery</a></li>
 										
 										<!-- <li><a href="error-404.html">404 Page</a></li> -->
 									</ul>
@@ -152,9 +153,9 @@
 										<li class="add-menu-left">
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
-												<li><a href="courses.html">Admission Details</a></li>
+												<li><a href="/error-404.html">Admission Details</a></li>
 												<li><a href="/fee-structure.html">Fee Structure</a></li>
-												<li><a href="profile.html">Result</a></li>
+												<li><a href="/error-404.html">Result</a></li>
 												<!-- <li><a href="event.html">Upcoming Event</a></li>
 												<li><a href="membership.html">Membership</a></li> -->
 											</ul>
@@ -231,7 +232,7 @@
     <div class="page-content">
         <!-- Page Heading Box ==== -->
 		<div class="page-banner "
-			style="background-image:url(assets/images/5th.jpeg); height: 30rem; border-bottom-right-radius: 20px; border-bottom-left-radius: 20px">
+			style="background-image:url(assets/images/banner/5th.jpeg); height: 30rem; border-bottom-right-radius: 20px; border-bottom-left-radius: 20px">
             <div class="container">
                 <div class="page-banner-entry">
                     <h1 class="text-white">About Our School</h1>
@@ -370,7 +371,7 @@
 				<div class="container">
 					<div class="d-flex align-items-stretch">
 						<div class="pt-logo mr-auto">
-							<a href="index.html"><img src="assets/images/fatima_name_logo-removebg-preview.png" alt=""/></a>
+							<a href="index.html"><img src="assets/images/icon/fatima_name_logo-removebg-preview.png" alt="" /></a>
 						</div>
 						<div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -453,7 +454,8 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 text-center text-white">Developed , Designed & Maintain By &lt;/Tensor_Block&gt;</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 text-center text-white">Developed , Designed & Maintain By <div
+							class="name-highlight">&lt;/Tensor_Block&gt;</div>
                 </div>
             </div>
         </div>
