--- a/contact-1.html
+++ b/contact-1.html
@@ -21,8 +21,8 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- FAVICONS ICON ============================================= -->
-	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+	<link rel="icon" href="assets/images/icon/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
 
 	<!-- PAGE TITLE HERE ============================================= -->
 	<title>Fatima Convent Senior Secondary</title>
@@ -94,8 +94,8 @@ document.getElementsByClassName('btn-send')
 					<div class="container clearfix">
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
-							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/school_logo_White_edited-removebg-preview.png" alt=""></a>
 						</div>
 						<!-- Mobile Nav Button ==== -->
 						<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -129,7 +129,8 @@ document.getElementsByClassName('btn-send')
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
-								<a href="index.html"><img class="img-align" src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""
+								<a href="index.html"><img class="img-align" src="assets/images/icon/school_logo_White_edited-removebg-preview.png"
+										alt=""
 										width="60"></a>
 							</div>
 							<ul class="nav navbar-nav">
@@ -140,12 +141,12 @@ document.getElementsByClassName('btn-send')
 									<ul class="sub-menu">
 										<li><a href="about-1.html">About</a>
 										</li>
-										<li><a href="event.html">Event</a></li>
+										<li><a href="/error-404.html">Event</a></li>
 										
 									</li> 
 										<li class="active"><a href="contact-1.html">Contact Us</a>
 										</li>
-										<li><a href="/gallery.html">Gallery</a></li>
+										<li><a href="/error-404.html">Gallery</a></li>
 
 										
 									</ul>
@@ -156,9 +157,9 @@ document.getElementsByClassName('btn-send')
 										<li class="add-menu-left">
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
-												<li><a href="courses.html">Admission Details</a></li>
+												<li><a href="/error-404.html">Admission Details</a></li>
 												<li><a href="/fee-structure.html">Fee Structure</a></li>
-												<li><a href="profile.html">Result</a></li>
+												<li><a href="/error-404.html">Result</a></li>
 											->
 											</ul>
 										</li>
@@ -175,12 +176,12 @@ document.getElementsByClassName('btn-send')
 											<h5 class="menu-adv-title">School Administration</h5>
 										</li>
 
-										<li><a href="/">School Committee</a></li>
-										<li><a href="/">Staff Details</a></li>
-										<li><a href="/">Staff Vacancy</a></li>
-										<li><a href="/">Review</a></li>
-										<li><a href="/">Teacher Profile</a></li>
-										<li><a href="/">User Profile</a></li>
+										<li><a href="/error-404.html">School Committee</a></li>
+										<li><a href="/error-404.html">Staff Details</a></li>
+										<li><a href="/error-404.html">Staff Vacancy</a></li>
+										<li><a href="/error-404.html">Review</a></li>
+										<li><a href="/error-404.html">Teacher Profile</a></li>
+										<li><a href="/error-404.html">User Profile</a></li>
 
 									</ul>
 								</li>
@@ -201,10 +202,11 @@ document.getElementsByClassName('btn-send')
 		<!-- Content -->
 		<div class="page-content bg-white">
 			<!-- inner page banner -->
-			<div class="page-banner ovbl-dark" style="background-image:url(assets/images/banner/banner3.jpg);">
+			<div class="page-banner "
+				style="background-image:url(assets/images/banner/WhatsApp\ Image\ 2023-01-25\ at\ 3.33.31\ PM.jpeg);">
 				<div class="container">
 					<div class="page-banner-entry">
-						<h1 class="text-white">Contact Us 1</h1>
+						<h1 class="text-white">Contact Us </h1>
 					</div>
 				</div>
 			</div>
@@ -212,8 +214,8 @@ document.getElementsByClassName('btn-send')
 			<div class="breadcrumb-row">
 				<div class="container">
 					<ul class="list-inline">
-						<li><a href="#">Home</a></li>
-						<li>Contact Us 1</li>
+						<li><a href="./index.html">Home</a></li>
+						<li>Contact Us </li>
 					</ul>
 				</div>
 			</div>
@@ -224,7 +226,7 @@ document.getElementsByClassName('btn-send')
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-5 col-md-5 m-b30">
-							<div class="bg-primary text-white contact-info-bx">
+							<div class="bg-primary text-white contact-info-bx" style="border-radius: 14px;">
 								<h2 class="m-b10 title-head">Contact <span>Information</span></h2>
 								<!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
 								<div class="widget widget_getintuch">
@@ -339,7 +341,7 @@ document.getElementsByClassName('btn-send')
 					<div class="container">
 						<div class="d-flex align-items-stretch">
 							<div class="pt-logo mr-auto">
-								<a href="index.html"><img src="assets/images/fatima_name_logo-removebg-preview.png"
+								<a href="index.html"><img src="assets/images/icon/fatima_name_logo-removebg-preview.png"
 										alt="" /></a>
 							</div>
 							<div class="pt-social-link">
@@ -437,7 +439,7 @@ document.getElementsByClassName('btn-send')
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 text-center text-white">Developed,Designed &
-							Maintained By &lt;/Tensor_Block&gt;</div>
+							Maintained By <div class="name-highlight">&lt;/Tensor_Block&gt;</div>
 					</div>
 				</div>
 			</div>
