--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- FAVICONS ICON and Remixicons============================================= -->
-	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="assets/images/icon/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/school__logo-removebg-preview.png" />
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -91,8 +91,8 @@
 					<div class="container clearfix">
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
-							<a href="index.html"><img src="assets/images/fatima_name_logo_edited-removebg-preview.png" class="logo-width"
+							<a href="index.html"><img src="assets/images/icon/school__logo-removebg-preview.png" alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/fatima_name_logo_edited-removebg-preview.png" class="logo-width"
 									alt=""></a>
 							<!-- <div class="logo-width"><a href="index.html"></a></div> -->
 						</div>
@@ -129,7 +129,8 @@
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo" id="logo1">
-								<a href="index.html"><img class="img-align" src="./assets/images/school_logo_White_edited-removebg-preview.png" alt=""
+								<a href="index.html"><img class="img-align" src="./assets/images/icon/school_logo_White_edited-removebg-preview.png"
+										alt=""
 										width="60"></a>
 							</div>
 							<ul class="nav navbar-nav">
@@ -139,11 +140,11 @@
 									<ul class="sub-menu">
 										<li><a href="about-1.html">About</a>
 										</li>
-										<li><a href="event.html">Event</a></li>
+										<li><a href="/error-404.html">Event</a></li>
 
 										<li><a href="contact-1.html">Contact Us</a>
 										</li>
-										<li><a href="/gallery.html">Gallery</a></li>
+										<li><a href="/error-404.html">Gallery</a></li>
 
 										<!-- <li><a href="error-404.html">404 Page</a></li> -->
 									</ul>
@@ -154,9 +155,9 @@
 										<li class="add-menu-left">
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
-												<li><a href="courses.html">Admission Details</a></li>
+												<li><a href="/error-404.html">Admission Details</a></li>
 												<li><a href="/fee-structure.html">Fee Structure</a></li>
-												<li><a href="profile.html">Result</a></li>
+												<li><a href="/error-404.html">Result</a></li>
 
 											</ul>
 										</li>
@@ -173,12 +174,12 @@
 											<h5 class="menu-adv-title">School Administration</h5>
 										</li>
 
-										<li><a href="/">School Committee</a></li>
-										<li><a href="/">Staff Details</a></li>
-										<li><a href="/">Staff Vacancy</a></li>
-										<li><a href="/">Review</a></li>
-										<li><a href="/">Teacher Profile</a></li>
-										<li><a href="/">User Profile</a></li>
+										<li><a href="/error-404.html">School Committee</a></li>
+										<li><a href="/error-404.html">Staff Details</a></li>
+										<li><a href="/error-404.html">Staff Vacancy</a></li>
+										<li><a href="/error-404.html">Review</a></li>
+										<li><a href="/error-404.html">Teacher Profile</a></li>
+										<li><a href="/error-404.html">User Profile</a></li>
 
 									</ul>
 								</li>
@@ -216,7 +217,7 @@
 								data-param7="" data-param8="" data-param9="" data-param10=""
 								data-description="Universe is expanding">
 								<!-- MAIN IMAGE -->
-								<img src="assets/images/WhatsApp Image 2023-01-25 at 3.33.31 PM.jpeg" alt="" data-bgposition="center center"
+								<img src="assets/images/banner/WhatsApp Image 2023-01-25 at 3.33.31 PM.jpeg" alt="" data-bgposition="center center"
 									data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina />
 
 								<!-- LAYER NR. 1 -->
@@ -310,7 +311,7 @@
 								data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
 								data-param9="" data-param10="" data-description="Universe is expanding">
 								<!-- MAIN IMAGE -->
-								<img src="assets/images/nope_lol.jpeg" alt="" data-bgposition="center center"
+								<img src="assets/images/banner/no.jpeg" alt="" data-bgposition="center center"
 									data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10"
 									class="rev-slidebg" data-no-retina />
 
@@ -438,7 +439,7 @@
 												class="gdlr-core-image-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-item-pdlr">
 												<div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
 													style="border-width: 0px;"><img
-														src='./assets/images/WhatsApp Image 2023-01-25 at 3.33.31 PM.jpeg'
+														src='./assets/images/banner/WhatsApp Image 2023-01-25 at 3.33.31 PM.jpeg'
 														width=700 height=450 sizes="(max-width: 767px) 100vw, 33vw" alt>
 												</div>
 											</div>
@@ -463,7 +464,7 @@
 											<div
 												class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
 												<a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-left-align gdlr-core-button-no-border"
-													href=https://donboscoguwahati.net/about-our-school/
+													href='./about-1.html'
 													style="font-size: 16px ;font-weight: 700 ;color: #c50227 ;padding: 15px 33px 15px 0px;text-transform: none ;"><span
 														class=gdlr-core-content>Learn More</span><i
 														class="gdlr-core-pos-right fa fa-long-arrow-right"
@@ -498,7 +499,7 @@
 												class="gdlr-core-image-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-item-pdlr">
 												<div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
 													style="border-width: 0px;"><img
-														src='./assets/images/ixs_enterprise_ii_by_quantumdesignsaz_dco80mz-fullview.jpg'
+														src='./assets/images/banner/ixs_enterprise_ii_by_quantumdesignsaz_dco80mz-fullview.jpg'
 														width=700 height=350 sizes="(max-width: 767px) 100vw, 33vw" alt>
 												</div>
 											</div>
@@ -799,7 +800,7 @@
 					<div class="container">
 						<div class="d-flex align-items-stretch">
 							<div class="pt-logo mr-auto">
-								<a href="index.html"><img src="assets/images/fatima_name_logo-removebg-preview.png" alt="" /></a>
+								<a href="index.html"><img src="assets/images/icon/fatima_name_logo-removebg-preview.png" alt="" /></a>
 							</div>
 							<div class="pt-social-link">
 								<ul class="list-inline m-a0">
@@ -896,7 +897,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 text-center text-white">Developed,Designed &
-							Maintained By &lt;/Tensor_Block&gt;</div>
+							Maintained By <div class="name-highlight">&lt;/Tensor_Block&gt;</div>
+							</div>
 					</div>
 				</div>
 			</div>
