--- a/error-404.html
+++ b/error-404.html
@@ -51,18 +51,17 @@
 </head>
 <body id="bg">
 <div class="page-wraper">
-	<div id="loading-icon-bx"></div>
+	<!-- <div id="loading-icon-bx"></div> -->
 	<div class="account-form">
-		<div class="account-head" style="background-image:url(assets/images/background/bg2.jpg);">
-			<a href="index.html"><img src="assets/images/logo-white-2.png" alt=""></a>
-		</div>
+		<!-- <div class="account-head not_available"style="background-image:url(assets/images/background/bg2.jpg);"><a href="index.html"><img src="assets/images/icon/fatima_name_logo_edited-removebg-preview.png"width="400"
+alt=""></a></div> -->
 		<div class="account-form-inner">
 			<div class="account-container">
 				<div class="error-page">
 					<h3>Ooopps :(</h3>
 					<h2 class="error-title">404</h2>
 					<h5>The Page you were looking for, couldn't be found.</h5>
-					<p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+					<p>The page you are looking for might have been removed, had its developement state, or is temporarily unavailable.</p>
 					<div class="">
 						<!-- <a href="index.html" class="btn m-r5">Preview</a> -->
 						<a href="index.html" class="btn outline black">Back To Home</a>
