--- a/contact-1.html
+++ b/contact-1.html
@@ -109,9 +109,9 @@ document.getElementsByClassName('btn-send')
 						<div class="secondary-menu">
 							<div class="secondary-inner">
 								<ul>
-									<li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
+									<!-- <li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a></li>
-									<!-- Search Button ==== -->
+									Search Button ==== -->
 									<li class="search-btn"><button id="quik-search-btn" type="button"
 											class="btn-link"><i class="fa fa-search"></i></button></li>
 								</ul>
