--- a/fee-structure.html
+++ b/fee-structure.html
@@ -100,8 +100,8 @@
 					<div class="secondary-menu">
 						<div class="secondary-inner">
 							<ul>
-								<li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a></li>
+								<!-- <li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
+																								<li><a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a></li> -->
 								<!-- Search Button ==== -->
 								<li class="search-btn"><button id="quik-search-btn" type="button"
 										class="btn-link"><i class="fa fa-search"></i></button></li>
@@ -173,10 +173,9 @@
 							<li><a href="/error-404.html">Review</a></li>
 							<li><a href="/error-404.html">Teacher Profile</a></li>
 							<li><a href="/error-404.html">User Profile</a></li>
-						
+							</li>
 						</ul>
-					</li>
-							
+					</ul>
 						<div class="nav-social-link">
 							<a href="javascript:;"><i class="fa fa-facebook"></i></a>
 							<a href="javascript:;"><i class="fa fa-google-plus"></i></a>
