updated the principal img and msg

--- a/about-1.html
+++ b/about-1.html
@@ -317,18 +317,47 @@
 										style="font-size: 16px ;font-weight: 400 ;text-transform: none ;color: #313132;">
 										<h3><span style="color: #313132;">Principal&#8217;s Message</span></h3>
 										<p><em><strong><img class="alignleft wp-image-8441 mr-null"
-														src='./assets/images/banner/ixs_enterprise_ii_by_quantumdesignsaz_dco80mz-fullview.jpg'
-														alt width=450 height=300
+														src='./assets/images/banner/principalimage.jpg'
+														alt="principal_img" width=450 height=200
 														style="border-radius: 10px;"></strong></em></p>
-										<h4 style="text-align: left; font-weight:600; color:#000">Dear Friends,</h4>
-										<h4 style="text-align: left; font-weight:600; color:#393838">Welcome to <br>
-											Fatima Convent Senior Secondary
-											School, Rangia!</h4>
-										<p style="color:#3c3b3b; text-align: left">I gladly welcome to all of you to our
-											enriching website, I am sure that I will serve as an essential interactive
-											tool for all
-											of you to acquaint yourselves with the large and extended
-											FCSS family.</p>
+										<h4 style="text-align: left; font-weight:600; color:#000">Dear Visitors,</h4>
+										<h4 style="text-align: left; font-weight:600; color:#393838">Welcome to our
+											school's official website! <br>
+
+											We are delighted to have you here,
+											exploring the virtual gateway to our vibrant educational community.
+										</h4>
+										<br>
+										<p style="color:#3c3b3b; text-align: left">At Fatima Convent Senior Secondary
+											School, we believe in
+											fostering a nurturing and inclusive environment that inspires a love for
+											learning. Through this website, we aim to provide you with a glimpse into
+											our rich academic curriculum, extracurricular activities, and the
+											outstanding achievements of our students.
+
+											We are proud of our dedicated team of educators who are committed to
+											nurturing the potential of every student. Our school's ethos revolves around
+											promoting critical thinking, creativity, and character development,
+											preparing our students to become confident global citizens.
+
+											Take a moment to navigate through the various sections, where you will
+											discover information about our faculty, programs, events, and resources. We
+											hope that you find this website informative and engaging, as it reflects the
+											essence of our school community.
+
+											Thank you for visiting our school website. We look forward to sharing the
+											wonderful journey of learning and growth with you.
+
+											Warm regards,
+										</p>
+										<br>
+										<br>
+										<p style="font-size:15px; text-align: left;color: #000; font-weight: 600;"
+											class="">
+											Sr. Lily Thresa, <br>
+											Principal, Fatima Convent Senior Seconday School
+
+										</p>
 									</div>
 								</div>
 							</div>
