--- a/index.html
+++ b/index.html
@@ -458,14 +458,9 @@
 												style="padding-bottom: 5px ;margin-right: 40px ;">
 												<div class=gdlr-core-text-box-item-content
 													style="font-size: 15px ;font-weight: 400 ;text-transform: none ;color: #555555 ;">
-													<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid
-														suscipit
-														blanditiis nulla nesciunt, est id vel optio quidem ipsa
-														laboriosam?Lorem ipsum
-														dolor sit amet consectetur, adipisicing elit. Explicabo
-														necessitatibus fugit
-														magnam consequatur quia quasi aliquam dicta repellendus alias
-														eos!</p>
+													<p>Fatima Convent School Fatima Nagar, Rangia, Assam was established on 15th January
+														2007. The School derives its name from the management it belongs: "Sisters of Our
+														Lady of Fatima, Northeast Region"...</p>
 												</div>
 											</div>
 										</div>
@@ -511,8 +506,8 @@
 												class="gdlr-core-image-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-item-pdlr">
 												<div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
 													style="border-width: 0px;"><img
-														src='./assets/images/banner/ixs_enterprise_ii_by_quantumdesignsaz_dco80mz-fullview.jpg'
-														width=700 height=350 sizes="(max-width: 767px) 100vw, 33vw" alt>
+														src='./assets/images/about/principal.jpg'
+														width=600 height=200 sizes="(max-width: 600px) 100vw, 33vw" alt>
 												</div>
 											</div>
 										</div>
@@ -521,11 +516,9 @@
 												style="padding-bottom: 5px ;margin-right: 40px ;">
 												<div class=gdlr-core-text-box-item-content
 													style="font-size: 15px ;font-weight: 400 ;text-transform: none ;color: #555555 ;">
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-														repellat,
-														maiores, odit repudiandae et error modi quod labore similique
-														quam vel magnam
-														magni sed quos corrupti. Vel, iusto! Veritatis, sequi.</p>
+													<p>Welcome to Fatima Convent School, a leading educational institution in Rangia, Assam. We provide quality education,
+														foster holistic development, and prepare students for a successful future. Join us and shape a bright future for
+														your child!</p>
 												</div>
 											</div>
 										</div>
@@ -635,7 +628,7 @@
 
 
 				<!-- Form -->
-				<div class="section-area section-sp1 ovpr-dark bg-fix online-cours"
+				<!-- <div class="section-area section-sp1 ovpr-dark bg-fix online-cours"
 					style="background-image:url(assets/images/background/bg1.jpg);">
 					<div class="container">
 						<div class="row">
@@ -643,7 +636,7 @@
 								<h2 class="principal_title">Our Facilities</h2>
 								<h5 class="principal_title">Content will get appear here very soon....😁</h5>
 								<div class="gdlr-core-text-box-item-content"
-									style="font-size: 16px ;font-weight: 400 ;text-transform: none ;color: #d7d6ff ;">
+									style="font-size: 16px ;font-weight: 400 ;text-transform: none ;color: #d7d6ff ;"> -->
 
 									<!-- <em><strong style="color: #fff; 
 										"><img class="alignleft principal_img"
