--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
 					<div class="d-flex align-items-stretch">
 						<div class="pt-logo mr-auto">
 							<a href="index.html"><img src="assets/images/icon/fatima_name_logo-removebg-preview.png"
-									alt="" /></a>
+									alt="logo" /></a>
 						</div>
 						<div class="pt-social-link">
 							<ul class="list-inline m-a0">
