--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
 	<!-- META ============================================= -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="" />
+	<meta name="keywords"
+		content="Fatima Convent School Rangia, fatimaschoolrangia, fatima convent senior secondary school" />
 	<meta name="author" content="Tensor_Block" />
 	<meta name="robots" content="" />
 
